GNOME Bugzilla – Bug 777144
gst-libs/gst/gl/gstglslstage.c: uses #ifdef GL_* constants instead of defining them
Last modified: 2017-01-13 00:36:35 UTC
Created attachment 343313 [details] [review] Define needed GL constants As pointed out by ystreet00 on irc its better to define a GL constant if needed instead of using preprocessor conditionals
Thanks! commit fb5339a3872a2159afd9e02a7dc4e71c2c1a34eb Author: Juan Pablo Ugarte <ugarte@endlessm.com> Date: Wed Jan 11 10:37:34 2017 -0300 glslstage: define GL constants if needed instead of using #ifdef https://bugzilla.gnome.org/show_bug.cgi?id=777144